FIX: Issue with overflow on select with attribute multiple

--- a/components/form/_base.scss
+++ b/components/form/_base.scss
@@ -16,9 +16,9 @@
         // See https://github.com/twbs/bootstrap/issues/24990
         word-wrap: normal;
 
-        // This fixes the overflow issue in Safari for long option names.
-        // See https://github.com/fylgja/fylgja/issues/66
-        overflow: hidden;
+        // This prevents the page overflow issue in Safari, for long option names
+        // See https://github.com/fylgja/fylgja/issues/66 for more info
+        overflow-x: hidden;
         text-overflow: ellipsis; // Same as Firefox in style
     }
 
